--- a/pom.xml
+++ b/pom.xml
@@ -74,13 +74,11 @@
             </exclusions>
         </dependency>
     </dependencies>
-    <!--
+
     <properties>
-        <maven.compiler.source>14</maven.compiler.source>
-        <maven.compiler.target>14</maven.compiler.target>
         <sonar.organization>ennasirimehdi</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-    </properties> -->
+    </properties>
     <build>
         <testSourceDirectory>src/test/java</testSourceDirectory>
         <resources>
