--- a/pom.xml
+++ b/pom.xml
@@ -76,8 +76,8 @@
     </dependencies>
 
     <properties>
-        <sonar.organization>rouxadrien</sonar.organization>
-        <sonar.host.url>https://localhost:9000</sonar.host.url>
+        <sonar.organization>adrienroux</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
     <build>
         <testSourceDirectory>src/test/java</testSourceDirectory>
@@ -121,7 +121,19 @@
                <artifactId>sonar-maven-plugin</artifactId>
     <version>3.0.2</version>
            </plugin>
-                 
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.3.0.603</version>
+                <executions>
+                    <execution>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sonar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
