--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,9 +30,6 @@ jobs:
       with:
         project-token: 'dd19504b035f4b74bad1d8e685b14bac'
         coverage-reports: target/site/jacoco/jacoco.xml
-        
-    - name: Publish Unit Test Results
-      uses: EnricoMi/publish-unit-test-result-action/composite@v1
-      if: always()
-      with:
-        files: test-results/**/*.xml
+               
+    - name: Junit Test Results
+       mvn -B test --file pom.xml
