--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,5 +34,11 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=AdrienRoux_Todolist-UT
-      - name: Run tests with Maven
-        run: mvn -B test --file pom.xml
+
+      - name: Report
+        uses: dorny/test-reporter@v1
+        with:
+           if: success() || failure()
+           name: Junit Tests
+           path: src/test/java/*
+           reporter: junit  
