--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,10 +35,5 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=AdrienRoux_Todolist-UT
 
-      - name: Report
-        uses: dorny/test-reporter@v1
-        with:
-           if: success() || failure()
-           name: Junit Tests
-           path: src/test/java/*
-           reporter: junit  
+      - name: Publish Test Report
+        run: npm run test:unit*
