--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,4 +36,4 @@ jobs:
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=AdrienRoux_Todolist-UT
 
       - name: Publish Test Report
-        run: npm run test:unit*
+        run: mvn -B test --file pom.xml
